2002-02-20  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-buildpackage: add fix to chown the directory as well

2002-02-18  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-modules: adds /etc/mailname on extractbuildplace.
	emacsen should install.

	* pbuilder-buildpackage: Can now handle ([SPACE]<< version)
	version relationship. Needed for arpack
	trying to change the /etc/group string, to make things work.
	Changed ordering of commands for SUTOUSER.

2002-02-16  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-buildpackage: fix ordering, to make the passwd creation work
	-rfakeroot added to DEBBUILDOPTS automatically.
	some more typos fixed.
	very much fixo.

	* pbuilderrc: added fakeroot to default extrapackages

	* pbuilderrc.5: added notes.

2002-02-15  Junichi Uekawa  <dancer@debian.org>

	* pbuilder.1: document updated, noting of minor details of 
	what option takes effect in what command.

	* pbuilder-buildpackage: changing it to use the specified uid.
	EXTRAPACKAGES option is valued within "pbuilder build"

	* pbuilderrc.5: document BUILDUSERNAME, BUILDUSERID

	* pbuilderrc (BUILDUSERNAME): added
	(BUILDUSERID): added

2002-02-14  Junichi Uekawa  <dancer@debian.org>

	* debian/TODO: document some known bugs and features.

	* pbuilder-updatebuildenv: instead of purge lilo,
	purge $REMOVEPACKAGES
	Tried to add something like: -o 'DPkg::Options={"--force-confnew";}' 
	to apt-get dist-upgrade, but it doesn't seem to function.

	* pbuilder-buildpackage: quoting some string
	redirct the cp error output to /dev/null because it looks ugly.
	Slight mods to message

2002-02-13  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-buildpackage: support for saving the aptcache when
	  build target fails in the middle of installing the 
	  build dependency.

2002-02-12  Junichi Uekawa  <dancer@debian.org>

	* debian/changelog: 0.22 released, 0.23 started.

	* pbuilder-updatebuildenv: apt-get clean is handled with ||true
