@@ -1,3 +1,7 @@
+INSTALL_DIRECTORY=install -d -m 0755 
+INSTALL_FILE=install -m 0644
+INSTALL_EXECUTABLE=install -m 0755
+
 clean:
 	rm -f *.bak *~ TAGS
 
@@ -5,19 +9,19 @@ TAGS:
 	etags pbuilder-* pbuilder
 
 install:
-	install -d $(DESTDIR)/etc
-	install -d $(DESTDIR)/usr/sbin
-	install -d $(DESTDIR)/usr/bin
-	install -d $(DESTDIR)/usr/lib/pbuilder
-	install -d $(DESTDIR)/usr/share/pbuilder
-	install -m 755 pbuilder-buildpackage $(DESTDIR)/usr/lib/pbuilder/
-	install -m 755 pbuilder-createbuildenv $(DESTDIR)/usr/lib/pbuilder/
-	install -m 755 pbuilder-updatebuildenv $(DESTDIR)/usr/lib/pbuilder/
-	install -m 755 pbuilder-runhooks $(DESTDIR)/usr/lib/pbuilder/
-	install -m 755 pbuilder-checkparams $(DESTDIR)/usr/lib/pbuilder/
-	install -m 755 pbuilder-modules $(DESTDIR)/usr/lib/pbuilder/
-	install -m 755 pbuilder $(DESTDIR)/usr/sbin
-	install -m 755 pdebuild $(DESTDIR)/usr/bin
-	install -m 644 pbuilderrc $(DESTDIR)/etc
-	install -m 644 pbuilderrc $(DESTDIR)/usr/share/pbuilder
+	$(INSTALL_DIRECTORY) $(DESTDIR)/etc
+	$(INSTALL_DIRECTORY) $(DESTDIR)/usr/sbin
+	$(INSTALL_DIRECTORY) $(DESTDIR)/usr/bin
+	$(INSTALL_DIRECTORY) $(DESTDIR)/usr/lib/pbuilder
+	$(INSTALL_DIRECTORY) $(DESTDIR)/usr/share/pbuilder
+	$(INSTALL_EXECUTABLE) pbuilder-buildpackage $(DESTDIR)/usr/lib/pbuilder/
+	$(INSTALL_EXECUTABLE) pbuilder-createbuildenv $(DESTDIR)/usr/lib/pbuilder/
+	$(INSTALL_EXECUTABLE) pbuilder-updatebuildenv $(DESTDIR)/usr/lib/pbuilder/
+	$(INSTALL_EXECUTABLE) pbuilder-runhooks $(DESTDIR)/usr/lib/pbuilder/
+	$(INSTALL_EXECUTABLE) pbuilder-checkparams $(DESTDIR)/usr/lib/pbuilder/
+	$(INSTALL_EXECUTABLE) pbuilder-modules $(DESTDIR)/usr/lib/pbuilder/
+	$(INSTALL_EXECUTABLE) pbuilder $(DESTDIR)/usr/sbin
+	$(INSTALL_EXECUTABLE) pdebuild $(DESTDIR)/usr/bin
+	$(INSTALL_FILE) 644 pbuilderrc $(DESTDIR)/etc
+	$(INSTALL_FILE) 644 pbuilderrc $(DESTDIR)/usr/share/pbuilder
 
