@@ -18,7 +18,7 @@
 
 export LANG=C
 export LC_ALL=C
-set -ex 
+set -e
 
 function copydsc () {
     local DSCFILE="$1"
@@ -212,6 +212,7 @@ fi;
 if [ -n "$BUILDUSERNAME" -a -n "$BUILDUSERID" ]; then
     SUTOUSER="HOME=/tmp/buildd su $BUILDUSERNAME -- "
     DEBBUILDOPTS="$DEBBUILDOPTS -rfakeroot"
+    EXTRAPACKAGES="${EXTRAPACKAGES} fakeroot"
     echo "I: using fakeroot in build."
 else
     # run the build in root
