@@ -4,7 +4,6 @@
 
 BASETGZ=/var/cache/pbuilder/base.tgz
 #EXTRAPACKAGES=gcc3.0-athlon-builder
-EXTRAPACKAGES="fakeroot"
 #export DEBIAN_BUILDARCH=athlon
 BUILDPLACE=/var/cache/pbuilder/build/
 MIRRORSITE=http://www.jp.debian.org/debian
