@@ -179,7 +179,7 @@ Specifying this will enable the use of fakeroot inside
 pbuilder.
 
 Note that this will require fakeroot to be installed within
-the chroot.
+the chroot, and fakeroot will automatically be installed.
 And 
 .B "-rfakeroot"
 will be added to
