@@ -8,14 +8,13 @@ pbuilder (0.23) unstable; urgency=low
   * Support building as non-root user, and using fakeroot inside 
     the chroot. (please test) -- can't do.
   * EXTRAPACKAGES takes effect within the build target. (please test)
-  * Make adding fakeroot inside the chroot the default.
   * handle ( <<version) version dependency format. Space should be 
     allowed there. (please test)
   * /etc/mailname inside chroot is generated. (closes: #133773)
   * apply fixed description, which looks better, by joeyh, thanks.
     (closes: #134457)
 
- -- Junichi Uekawa <dancer@debian.org>  Mon, 18 Feb 2002 12:48:03 +0900
+ --
 
 pbuilder (0.22) unstable; urgency=low
 
